<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_xml"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/tip_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="Nyetirnya lihai"
        android:hint="@string/saran_untuk_drivermu"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_xml"
        tools:ignore="TextContrastCheck" />
    
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/rating_drivermu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_input" />
    
    <RadioGroup
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:checkedButton="@id/option_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question">

        <RadioButton
            android:id="@+id/option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keren" />

        <RadioButton
            android:id="@+id/option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mantap" />

        <RadioButton
            android:id="@+id/option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okelah" />

        <RadioButton
            android:id="@+id/option_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurang" />

        <RadioButton
            android:id="@+id/option_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jelek" />
    </RadioGroup>

    <Switch
        android:id="@+id/anonimosity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:checked="false"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/kirim_saran_secara_anonim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/options"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/submit_button"
        app:layout_constraintTop_toBottomOf="@id/anonimosity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/kirim_feedback"
        android:layout_marginHorizontal="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apa_peran_rating"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/submit_button"
        app:layout_constraintTop_toBottomOf="@id/submit_button" />

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="12dp"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_constraintTop_toBottomOf="@id/faq"/>


</androidx.constraintlayout.widget.ConstraintLayout>